test/files/neg/t712.check
t712.scala:10: error: overloaded method coerce needs result type
  implicit def coerce(p : ParentImpl) = p.self;
                                          ^
t712.scala:3: warning: Implicit definition should have explicit type (inferred A.this.Node) [quickfixable]
  implicit def coerce(n : NodeImpl) = n.self;
               ^
t712.scala:10: warning: Implicit definition should have explicit type [quickfixable]
  implicit def coerce(p : ParentImpl) = p.self;
               ^
2 warnings
1 error
